--- a/client/src/App.css
+++ b/client/src/App.css
@@ -170,3 +170,35 @@
   width: 30vw;
   background-color: grey;
 }
+
+/* src/components/Popup.css */
+.popup {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background: white;
+  padding: 20px;
+  border: 1px solid black;
+  z-index: 1000;
+}
+
+.popup-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.popup-content p {
+  margin: 0 0 10px 0;
+}
+
+.popup-content button {
+  padding: 5px 10px;
+}
+
+.hotelPage{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
